--- a/blocks/header/__panel/header__panel.css
+++ b/blocks/header/__panel/header__panel.css
@@ -11,7 +11,8 @@
 @media (max-width: 1280px){
   .header__panel{
     padding: 37.5px 16px;
-    width: calc(1020px - 32px);
+    width: calc(100% - 32px);
+    gap: 15px;
   }
 }
 
@@ -19,5 +20,12 @@
   .header__panel{
     padding: 37.5px 0px;
     width: calc(100% - 68px);
+    min-width: 280px;
+  }
+}
+
+@media (max-width: 768px){
+  .header__panel{
+    gap: 0px;
   }
 }
