--- a/blocks/links-list/_place/links-list_place_menu.css
+++ b/blocks/links-list/_place/links-list_place_menu.css
@@ -1,6 +1,7 @@
 .links-list_place_menu{
-  height: 50%;
+  height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-size: 40px;
 }
