--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/navigation-link/navigation-link.css);
 @import url(../blocks/header/__right-content/header__right-content.css);
 @import url(../blocks/light-link/light-link.css);
+@import url(../blocks/light-link/_place/light-link_place_header.css);
 @import url(../blocks/header/__burger-logo/header__burger-logo.css);
 @import url(../blocks/header/__menu/header__menu.css);
 @import url(../blocks/header/__burger-line/header__burger-line.css);
