--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -15,8 +15,13 @@
     font-weight: 400;
     line-height: 62px;
     width: calc(100% - 255px);
-    min-width: 294px;
     margin: 0px;
     margin-bottom: 17px;
+  }
+}
+
+@media (max-width: 480px){
+  .header__title{
+    width: calc(100% - 68px);
   }
 }
