--- a/pages/index.css
+++ b/pages/index.css
@@ -22,3 +22,18 @@
 @import url(../blocks/section-subtitle/_place/section-subtitle_place_header.css);
 @import url(../blocks/light-link/_size/light-link_size_big.css);
 @import url(../blocks/button-try-free/button-try-free.css);
+@import url(../blocks/main/main.css);
+@import url(../blocks/features/features.css);
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-subtitle/_place/section-subtitle_place_header.css);
+@import url(../blocks/features/__content/features__content.css);
+@import url(../blocks/features/__images-box/features__images-box.css);
+@import url(../blocks/features/__chat/features__chat.css);
+@import url(../blocks/features/__line-chart/features__line-chart.css);
+@import url(../blocks/features/__text/features__text.css);
+@import url(../blocks/features/__list/features__list.css);
+@import url(../blocks/features/__title/features__title.css);
+@import url(../blocks/features/__paragraph/features__paragraph.css);
+@import url(../blocks/features/__title/_content-before/features__title_content-before_cutlery.css);
+@import url(../blocks/features/__title/_content-before/features__title_content-before_aliens.css);
+@import url(../blocks/features/__title/_content-before/features__title_content-before_infinity.css);
