--- a/pages/index.css
+++ b/pages/index.css
@@ -48,6 +48,9 @@
 @import url(../blocks/contents/__card/_elements/contents__card_elements_macbook.css);
 @import url(../blocks/contents/__card/_elements/contents__card_elements_boards.css);
 @import url(../blocks/button-try-free/_margin/button-try-free_margin_top.css);
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__image/photo-grid__image.css);
 @import url(../blocks/partners/partners.css);
 @import url(../blocks/partners/__content/partners__content.css);
 @import url(../blocks/partners/__list/partners__list.css);
