--- a/pages/index.css
+++ b/pages/index.css
@@ -56,6 +56,11 @@
 @import url(../blocks/partners/__list/partners__list.css);
 @import url(../blocks/partners/__item/partners__item.css);
 @import url(../blocks/partners/__icon/partners__icon.css);
+@import url(../blocks/advertisement/advertisement.css);
+@import url(../blocks/advertisement/__content/advertisement__content.css);
+@import url(../blocks/advertisement/__title/advertisement__title.css);
+@import url(../blocks/advertisement/__image/advertisement__image.css);
+@import url(../blocks/button-try-free/_size/button-try-free_size_big.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__wrapper/footer__wrapper.css);
 @import url(../blocks/footer/__content/footer__content.css);
